...

/**
 * test tags to be used in compose
 */
enum class TestTag {
    List,
    AppBarBackButton,
    AppBarTitle,
    BottomAppBarDiscard,
    BottomAppBarSave,
    LibrariesContainer,
    MicrophoneOverlaySizeOptions,
    MicrophoneFab,
    Indication,
    Overlay,

    AudioPlayingOptions,
    AudioOutputOptions,
    Endpoint,
    AccessToken,
    SendEvents,
    SendIntents,
    AudioRecordingUdpHost,
    AudioRecordingUdpPort,
...
    PorcupineOpenConsole,
    PorcupineKeyword,
    PorcupineLanguage,
    PorcupineKeywordScreen,
    PorcupineLanguageScreen,
    PorcupineKeywordCustomScreen,
    PorcupineKeywordDefaultScreen,

    WebServerSSLWiki,
    MQTTSSLWiki,

    TabDefault,
    TabCustom,
    Sensitivity,
    Download,
    SelectFile,
    PlayPause,
    Delete,
    Undo,
    EnabledSwitch,
    BatteryOptimization,
    VisibleWhileAppIsOpened,
    IndicationSoundScreen,

    WakeWordDetectionTurnOnDisplay,
    WakeWordLightIndicationEnabled,
    SoundIndicationEnabled,

    Disabled,
    Default,
    Warning,

    AudioFocusOption,
    AudioFocusSettingsConfiguration,
    AudioFocusOnNotification,
...
    Volume,
    MqttApi,
    HttpApi,
    HotWord,
    AudioOutput,
    IntentHandling,
    AutomaticSilenceDetectionSettingsConfiguration,
    AutomaticSilenceDetectionSettingsMinimumTime,
    AutomaticSilenceDetectionSettingsTime,
    AutomaticSilenceDetectionSettingsAudioLevelTest,
    AutomaticSilenceDetectionSettingsTest,
    CrashlyticsEnabled,
    ShowLogEnabled,
    AudioFramesEnabled,

    DialogManagementOptions,

    DialogOk,
    DialogCancel,
    DialogUnsavedChanges,
    DialogChangelogButton,
    DialogChangelog,
    DialogDataPrivacyButton,
    DialogDataPrivacy,
...
