package org.rhasspy.mobile.viewmodel.navigation.destinations.settings

import org.rhasspy.mobile.viewmodel.navigation.NavigationDestination

enum class IndicationSettingsScreenDestination : NavigationDestination {

    OverviewScreen,
    WakeIndicationSoundScreen,
    RecordedIndicationSoundScreen,
    ErrorIndicationSoundScreen

}